Header image stretch fixes in IE8; set muted color for slideshow first/last arrows

--- a/style.css
+++ b/style.css
@@ -373,7 +373,9 @@ article.story .story-header-image {
 	background-position: center;
 	background-repeat: no-repeat;
 }
-article.story .story-header-image img { position: absolute;	clip: rect(1px, 1px, 1px, 1px); }
+.ie8 article.story .story-header-image { background-image: none !important; position: relative; text-align: center; }
+article.story .story-header-image img { position: absolute; clip: rect(1px, 1px, 1px, 1px); }
+.ie8 article.story .story-header-image img { position: relative; clip: none !important; height: 100%; width: auto; margin: auto;  }
 article.story .title-wrap { padding-top: 30px; }
 article.story .story-header-image + .container .title-wrap { padding-top: 0; }
 article.story h1,
@@ -887,7 +889,7 @@ article.ss-photo-essay {
 	background-color: #212121;
 }
 
-.ss-content {
+.ss-content { /* calculate height w/jquery */
     position: relative;
     top: 0;
     left: 0;
@@ -988,13 +990,14 @@ article.ss-photo-essay {
     text-decoration: none;
 }
 
+.ss-arrow.ss-last,
+.ss-arrow.ss-last:hover {
+	color: #333;
+}
+
 .ss-arrow:hover {
     text-decoration: none;
     color: #fff;
-}
-
-.ss-arrow.ss-last:hover {
-    color: #BEBEBE;
 }
 
 .ss-arrow-prev {
